Squashed commit of the following:
commit 17baddb811ca4c0a83d5761d42eaaaacee62e473
Merge: 8c7a381 6b52636
Author: semaxyD <88868446+semaxyD@users.noreply.github.com>
Date:   Mon Oct 13 15:59:44 2025 -0500

    Merge pull request #78 from Plataforma-Scout-UAO-2025/feature/pagos-correcion

    Feature/pagos correcion

commit 6b526361e762fd33848fe3fae74459f9b0e4612d
Author: semaxyD <88868446+semaxyD@users.noreply.github.com>
Date:   Mon Oct 13 15:58:21 2025 -0500

    Add Network icon import to AppLayout

commit 678a344f86c9951296f51a94eeb762baa7debe9e
Merge: d74ad2d 8c7a381
Author: semaxyD <88868446+semaxyD@users.noreply.github.com>
Date:   Mon Oct 13 15:51:30 2025 -0500

    Merge branch 'develop' into feature/pagos-correcion

commit d74ad2d27f84c6ee544b71d621b5c7aff32d28e6
Author: SimonR2003 <simon.ruizcam@gmail.com>
Date:   Mon Oct 13 14:55:10 2025 -0500

    fix: Jacoco coverage considering enums, config and other modules without implementation logic

commit 519d4b5ad2634910b00349a240369eb9cc219396
Author: semaxyD <88868446+semaxyD@users.noreply.github.com>
Date:   Sun Oct 12 16:30:03 2025 -0500

    Remove unused import 'Network' from AppLayout

    Removed unused 'Network' import from AppLayout.

commit 3fd37019ecdd7b63c9742257843ae0db90559a04
Merge: 7b5585b 5ade772
Author: semaxyD <88868446+semaxyD@users.noreply.github.com>
Date:   Sun Oct 12 16:24:39 2025 -0500

    Merge branch 'develop' into feature/pagos-correcion

commit 7b5585b1cc1d6a7b31cbf57534cfd9927478aa7b
Author: Santiago Cortés <santiago.cortes@qualitacorp.com>
Date:   Sat Oct 11 15:16:50 2025 -0500

    refactor: improve tenant ID handling in Financiero components and clean up unused imports

commit a6f2016e42f1a59a8f875c4941582a0b31534849
Author: SimonR2003 <simon.ruizcam@gmail.com>
Date:   Sat Oct 11 14:50:37 2025 -0500

    feat: refactor fees

    Refactorice el código para utilizar Lombok en los modelos de datos, reduciendo el código duplicado y mejorando la lectura.

commit df81462525d42dde877